--- a/config/database.yml
+++ b/config/database.yml
@@ -21,8 +21,13 @@ test: &test
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+#  <<: *default
+#  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: utf8
+  pool: 5
+  timeout: 5000
+  database: db/production
 
 cucumber:
   <<: *test
